refactor: Todo service 불변하고 명시적인 리스트 사용으로 변경